<resources>
    <string name="app_name">Amazon Location</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_tracking">Trackers</string>
    <string name="menu_geofence">Geofences</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_more">About</string>
    <string name="sign_in">Sign in</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="password">Password</string>
    <string name="amazon_password">Amazon password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="show_password">Show password</string>
    <string name="privacy_policy">By continuing, you agree to Amazon\'s Conditions of Use and Privacy Notice.</string>
    <string name="condition_of_use">Conditions of Use</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="sign_out_successfully">Sign out successfully</string>
    <string name="sign_in_to_access_tracking">Sign in to access Tracking and Geofence features or proceed to Explore the map</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="maybe_later">Maybe later</string>
    <string name="you_are_connected">You are connected</string>
    <string name="continue_to_explore">Continue to Explore</string>
    <string name="aws_cloudformation_required">Connect AWS Account</string>
    <string name="geofencing_and_tracking_features">Connect your AWS account to enable Geofences and Trackers. This will ensure your tracking and geofencing data is only stored in your account. After you log in, all features of the Demo App will run using resources you deploy in your AWS account. Log out if you wish to continue running the Demo App using resources in AWS’s demo app account.</string>
    <string name="connect">Connect</string>
    <string name="how_to_connect">How to connect to</string>
    <string name="how_to_connect_1_1">**Click here** to run a CloudFormation template to securely create required resources.</string>
    <string name="how_to_connect_1_2">It will securely create all required resources.</string>
    <string name="how_to_connect_1_3">You can delete these resources through the stack deletion option or ‘Manage resources’ pages in the menu on the left.</string>
    <string name="how_to_connect_2_1">Connect the demo app with the recently created AWS resources by copying in input fields.</string>
    <string name="how_to_connect_2_2">From your CloudFormation output section copy the corresponding named values as reflected in the right section form (IdentityPoolId etc.). **Learn more**.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="how_to_connect_3_1">Login using the generated user credentials.</string>
    <string name="how_to_connect_3_2">Now you should be able to use the trackers and geofences features using data stored in your account.</string>
    <string name="three">3</string>
    <string name="identityPoolId">IdentityPoolld</string>
    <string name="user_pool_client_id">UserPoolClientid</string>
    <string name="user_pool_ld">UserPoolld</string>
    <string name="by_connecting_i_agree_to_amazon">By connecting I agree to Amazon Location’s\n**Terms &amp; Conditions**</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="help">Help</string>
    <string name="user_domain">UserDomain</string>
    <string name="enter_user_domain">Enter UserDomain</string>
    <string name="enter_identity_pool_id">Enter IdentityPoolId</string>
    <string name="enter_user_pool_client_id">Enter UserPoolClientId</string>
    <string name="enter_user_pool_id">Enter UserPoolId</string>
    <string name="location_permission_is_required">Location permission is Required</string>
    <string name="ok">OK</string>
    <string name="permission">Permission</string>
    <string name="logout">Log out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?\nGeofence and Tracking information is not available without sign in</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect_aws">Disconnect from AWS</string>
    <string name="directions">Directions</string>
    <string name="search">Search</string>
    <string name="no_matching_places_found">No matching places found</string>
    <string name="make_sure_your_search_is_spelled_correctly_try_adding_a_city_country_or_postcode">Make sure your search is spelled correctly. Try adding a city, postcode, or country.</string>
    <string name="search_nearby">Search nearby</string>
    <string name="text_switch_avoid_tools">Avoid tolls</string>
    <string name="text_switch_avoid_ferries">Avoid ferries</string>
    <string name="text_switch_avoid_dirt_roads">Avoid dirt roads</string>
    <string name="text_switch_avoid_u_turn">Avoid uTurn</string>
    <string name="text_switch_avoid_tunnels">Avoid tunnels</string>
    <string name="_2_min">2 min</string>
    <string name="label_search_destination">Search Destination</string>
    <string name="label_my_location">My Location</string>
    <string name="label_directions">Directions</string>
    <string name="label_route_options">Route Options</string>
    <string name="label_default_route_options">Default route options</string>
    <string name="label_selected">• Selected</string>
    <string name="btn_go">Go</string>
    <string name="label_walk">Walk</string>
    <string name="label_drive">Drive</string>
    <string name="label_truck">Truck</string>
    <string name="label_scooter">Scooter</string>
    <string name="label_search_starting_point">Search starting point</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log out</string>
    <string name="add_geo_fence_1">Add a geofence to get notified when your device enters or exits it</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="add">Add</string>
    <string name="radius">Radius</string>
    <string name="name">Name</string>
    <string name="type_geofence_name">Type Geofence Name</string>
    <string name="save">Save</string>
    <string name="cloudformation_template_resources">CloudFormation\nTemplate Resources</string>
    <string name="cloud_formation_1">Cognito identity pool, Cognito user pool, IAM role, Amazon location resources, maps, places, routes, geofence, and tracking</string>
    <string name="geofence_name_exists">Geofence name already exists</string>
    <string name="please_enter_geofence_name">Please enter geofence name</string>
    <string name="invalid_name">Contain only characters (A–Z,a–z,0–9),hyphens(-),periods(.), &amp; underscores(_)</string>
    <string name="are_you_sure_want_to_delete_geofence">Are you sure you want to delete geofence?</string>
    <string name="delete">Delete</string>
    <string name="edit_geofence">Edit Geofence</string>
    <string name="label_map_style">Map Style</string>
    <string name="map_standard" translatable="false">Standard</string>
    <string name="map_monochrome" translatable="false">Monochrome</string>
    <string name="map_hybrid" translatable="false">Hybrid</string>
    <string name="map_satellite" translatable="false">Satellite</string>
    <string name="label_enter_identity_pool_id">Please enter proper identity pool id</string>
    <string name="label_enter_domain">Entered user domain is wrong</string>
    <string name="label_enter_user_pool_client_id">Entered user pool client id is wrong</string>
    <string name="label_enter_user_pool_id">Entered user pool id is wrong</string>
    <string name="label_enter_web_socket_url">Entered web socket url is wrong</string>
    <string name="map_style">Map style</string>
    <string name="aws_cloudformation">Connect your AWS Account</string>
    <string name="label_connected">You are connected</string>
    <string name="label_connected_description">Connect your AWS account to enable Geofences and Trackers. This will ensure your tracking and geofencing data is only stored in your account. After you log in, all features of the Demo App will run using resources you deploy in your AWS account. Log out if you wish to continue running the Demo App using resources in AWS’s demo app account.</string>
    <string name="label_how_to_remove">How to remove:</string>
    <string name="label_connected_title_1">**Click here** to remove a CloudFormation template</string>
    <string name="label_connected_title_2">It will securely create all required resources.</string>
    <string name="label_connected_title_3">Connect the Amazon Location app with the created resources</string>
    <string name="label_connected_title_4">Please enter the following required fields into the Location.</string>
    <string name="label_tracking_history">Tracking History</string>
    <string name="label_tracking_your_activity">Tracking your device location</string>
    <string name="label_enable_tracking">Enable Live Trackers</string>
    <string name="label_enable_tracking_detail">Enabling the feature will allow you to track your device and get notified when the device enters or exits any of your geofences.</string>
    <string name="label_check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="label_not_tracking_your_activity">Not tracking your device location</string>
    <string name="label_start_tracking">Start Tracking</string>
    <string name="label_stop_tracking">Stop Tracking</string>
    <string name="label_today">Today</string>
    <string name="label_tracking_data_storage">Tracking Data Storage</string>
    <string name="label_delete_tracking_data">Delete Tracking Data</string>
    <string name="tv_tracking_data_storage_1">We only display data for the last 3 paths that you track with Amazon Location.</string>
    <string name="label_position_start">start</string>
    <string name="label_position_end">end</string>
    <string name="label_position_data">data</string>
    <string name="amazon_location_can_t_reach_the_internet">Amazon Location can\'t reach the internet</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="unable_to_execute_request">Unable to execute HTTP request:</string>
    <string name="label_position_loader">Loader</string>
    <string name="label_web_socket_url">WebSocketUrl</string>
    <string name="label_enter_web_socket_url_1">Enter WebSocketUrl</string>
    <string name="label_are_you_sure_delete_data">Are you sure you want to delete tracking data?</string>
    <string name="are_you_sure_you_want_to_disconnect_aws">Are you sure you want to Disconnect AWS?</string>
    <string name="aws_cloud_formation">AWS CloudFormation</string>
    <string name="no_tracking_history_found">No tracking history available</string>
    <string name="label_language">Language</string>
    <string name="label_deutsch" translatable="false">Deutsch</string>
    <string name="label_espa_ol" translatable="false">Español</string>
    <string name="label_english" translatable="false">English</string>
    <string name="label_fran_ais" translatable="false">Français</string>
    <string name="label_italiano" translatable="false">Italiano</string>
    <string name="label_portugu_s_brasileiro" translatable="false">Português Brasileiro</string>
    <string name="label_simplified_chinese" translatable="false">简体中文</string>
    <string name="label_traditional_chinese" translatable="false">繁体中文</string>
    <string name="label_japanese" translatable="false">日本語</string>
    <string name="label_korean" translatable="false">한국어</string>
    <string name="label_arabic" translatable="false">العربية</string>
    <string name="label_hebrew" translatable="false">עברית</string>
    <string name="label_hindi" translatable="false">हिन्दी</string>
</resources>