<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_language"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_55"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/SP16BoldMediumBlackTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_55"
        android:gravity="center"
        android:text="@string/label_language"
        android:textColor="@color/color_medium_black"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/color_view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_language" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/dp_16">

            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_german"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_deutsch"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_spanish"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_espa_ol"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_german" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_english"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_english"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_spanish" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_french"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_fran_ais"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_english" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_italian"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_italiano"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_french" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_brazilian_portuguese"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_portugu_s_brasileiro"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_italian" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_simplified_chinese"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_simplified_chinese"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_brazilian_portuguese" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_traditional_chinese"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_traditional_chinese"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_simplified_chinese" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_japanese"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_japanese"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_traditional_chinese" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_korean"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_korean"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_japanese" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_arabic"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_arabic"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_korean" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_hebrew"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_hebrew"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_arabic" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_hindi"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_gravity="start"
                    android:button="@drawable/item_radio_selector"
                    android:layoutDirection="rtl"
                    android:text="@string/label_hindi"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_medium_black"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_hebrew" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>